--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./app.js"
+    "start": "nodemon ./app.js",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -30,10 +30,19 @@
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0"
   },
+   "jest": {
+    "testEnvironment": "node",
+    "extensionsToTreatAsEsm": ["./test.js"],
+    "transform": {},
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    }
+  },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
